errlog
./src/env.cpp: In member function ‘void Env::feedInput()’:
./src/env.cpp:162:55: error: request for member ‘x’ in ‘((Env*)this)->Env::bodies.std::vector<Body>::operator[](((std::vector<Body>::size_type)i)).Body::nearWallLoc.std::vector<unsigned int>::operator[](((std::vector<unsigned int>::size_type)j))’, which is of non-class type ‘__gnu_cxx::__alloc_traits<std::allocator<unsigned int>, unsigned int>::value_type’ {aka ‘unsigned int’}
  162 |    inputVals.push_back(float(bodies[i].nearWallLoc[j].x)/normalizer);
      |                                                       ^
./src/env.cpp:163:55: error: request for member ‘y’ in ‘((Env*)this)->Env::bodies.std::vector<Body>::operator[](((std::vector<Body>::size_type)i)).Body::nearWallLoc.std::vector<unsigned int>::operator[](((std::vector<unsigned int>::size_type)j))’, which is of non-class type ‘__gnu_cxx::__alloc_traits<std::allocator<unsigned int>, unsigned int>::value_type’ {aka ‘unsigned int’}
  163 |    inputVals.push_back(float(bodies[i].nearWallLoc[j].y)/normalizer);
      |                                                       ^
./src/env.cpp: In member function ‘double Env::getOutputFromNN(unsigned int)’:
./src/env.cpp:183:2: error: ‘feedIn’ was not declared in this scope; did you mean ‘feedInput’?
  183 |  feedIn
      |  ^~~~~~
      |  feedInput
./src/env.cpp:185:1: warning: no return statement in function returning non-void [-Wreturn-type]
  185 | }
      | ^
make: *** [Makefile:2: build] Error 1
